fix(mobile): overflow

--- a/src/styles/dan-denney.webflow.css
+++ b/src/styles/dan-denney.webflow.css
@@ -1325,6 +1325,7 @@ body {
   font-size: 18px;
   font-weight: 400;
   line-height: 1.3;
+  overflow-x: hidden;
 }
 
 h1 {
